--- a/.github/workflows/cr.yml
+++ b/.github/workflows/cr.yml
@@ -7,6 +7,8 @@ permissions:
 on:
   pull_request:
     types: [opened, reopened, synchronize]
+    paths:
+      - "**/src/**"
 
 jobs:
   gpt-review:
